# pathtracer

./: .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  core.12398  core.32158  core.32167  core.32235  core.32243  dev.vim  pathtracer.cpp  shader.frag  shader.vert
objs/: CornellBox-Original-RedGreen.mtl  CornellBox-Original.mtl  CornellBox-Sphere.mtl
src/: aabb.cpp  aabb.hpp  camera.cpp  camera.hpp  frontends.cpp  frontends.hpp  image.cpp  image.hpp  kdtree.cpp  kdtree.hpp  model.hpp  pathtracer.cpp  ray.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shader.frag  shader.vert  triangle.cpp  triangle.hpp  utils.hpp  vector.cpp  vector.hpp  workqueue.cpp  workqueue.hpp
